# movak

./: .gitignore  LICENSE  README.md  pyproject.toml
dev/: main.py
docs/: architecture.md  installation.md
src/movak/: __init__.py
src/movak/ai/: __init__.py  anomaly_detection.py  boundary_detection.py  phoneme_suggestion.py
src/movak/annotations/: __init__.py  model.py
src/movak/app/: __init__.py  session_manager.py  state.py
src/movak/audio/: __init__.py  loader.py  playback.py  spectrogram.py  waveform_cache.py
src/movak/core/: __init__.py  corpus.py  feature_track.py  interval.py  recording.py  schema.py  tier.py
src/movak/features/: __init__.py  analysis_inspector.py  formants.py  (+4 more)
tests/annotations/: test_model.py
tests/app/: test_state.py
tests/audio/: test_loader.py  test_playback.py  test_spectrogram.py
tests/core/: test_corpus.py  test_feature_track.py  test_interval.py  test_recording.py  test_schema.py  test_tier.py
tests/features/: test_analysis_inspector.py
tests/gui/: test_analysis_inspector_controller.py  test_analysis_plot_widgets.py  test_left_dock.py  test_main_window.py  test_navigation_controller.py  test_navigation_viewbox.py  test_playback_controller.py  test_right_dock.py  test_session_restore.py  test_timeline_scrollbar.py  test_timeline_viewport.py
tests/operations/: test_batch.py  test_boundary.py  test_history.py  test_merge.py  test_relabel.py  test_split.py
tests/query/: test_query_engine.py  test_token_index.py
tests/timeline/: test_controller.py  test_tile_cache.py  test_viewport.py  test_waveform_pyramid.py
(+93 files in other folders)
