[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "movak"
version = "0.1.0"
description = "Praat-like GUI application skeleton for correcting automatic speech annotations."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Movak Contributors" },
]
dependencies = [
  "numpy",
  "pandas",
  "pyqt6",
  "pyqtgraph",
  "praat-parselmouth",
  "soundfile",
  "sounddevice",
  "pytest",
]

[project.optional-dependencies]
dev = []

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
